rm histry auto load

--- a/app/views/kpi_entries/index.html.erb
+++ b/app/views/kpi_entries/index.html.erb
@@ -158,7 +158,7 @@
     //进入界面的时候 进行请求
     function OnloadShow(startdate, enddate) {
         if (kpi_li.length != 0) {
-            kpi_ajax(kpi_li[0].title, startdate, enddate);
+            //kpi_ajax(kpi_li[0].title, startdate, enddate);
         } else {
             NothingToShow();
         }
