--- a/app/assets/stylesheets/Analytics.scss
+++ b/app/assets/stylesheets/Analytics.scss
@@ -13,7 +13,7 @@
 .chosen-attribute{
   float:left;
   width:280px;
-  height:80px;
+  //height:80px;
   &>div{
     margin-top:2px;
     & .chosen-choices{
