--- a/app/assets/stylesheets/Analytic-main.css
+++ b/app/assets/stylesheets/Analytic-main.css
@@ -27,13 +27,14 @@
 }
 
 .index-condition-group:first-of-type {
-    width: 430px;
+    width: 250px;
     height: 66px;
     position: relative;
 }
 
 .index-condition-group:nth-of-type(2) {
-    width: 260px;
+    width: 240px;
+    margin-left: -10px;
 }
 
 .analytic-control-condition-visible {
@@ -72,20 +73,24 @@
 div[title='analy-entity-select'] {
     position: absolute;
     left: 0px;
-    top: 18px;
+    /*top: 18px;*/
+    width: 120px !important;
 }
 
 div[title='analy-kpi-select'] {
     position: absolute;
-    left: 150px;
-    bottom: 0px;
-    top: 18px;
+    left: 0;
+    bottom: 0;
+    top: 40px;
+    width: 120px !important;
 }
 
 div[title='analy-view-select'] {
+    width: 140px !important;
     position: absolute;
     top: 18px;
-    right: 0px;
+    right: -20px;
+    margin-top: -14px !important;
 }
 
 .index-date-extra-info {
