--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -176,11 +176,7 @@
           </div>
 
           <div class="index-condition-group" style="width: 100px; margin-left: 15px;">
-            <select name="x_group" id="x_group" class="chosen-select">
-              <option value="100">日期</option>
-              <option value="200">部门</option>
-              <option value="300">维度</option>
-            </select>
+            <select name="x_group" id="x_group" class="chosen-select"></select>
           </div>
 
           <a class="btn btn-primary btn-normal pull-left" style="margin-top:14px;" id="db-add-chart">Add</a>
